TEST_PROGRAMS/INVALID/daniel_pham/i2.min
# Unkown characters
var a&: int;

